# sportobjects_back

./: pyproject.toml
data/: pg_connector.py
data/models/: sbortobjects.py
data/schemas/: sportobjects.py
interface/: main.py
