[tool.poetry]
name = "sportobjects-back"
version = "0.1.0"
description = ""
authors = ["DruniOrlov <77417321+DruniOrlov@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sportobjects_back"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
requests = "^2.28.2"
grequests = "^0.6.0"
httpx = "^0.23.3"
pandas = "^1.5.3"
sqlalchemy = "^2.0.4"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
